hphp/test/zend/good/Zend/tests/generators/bug63066.php.expectf
foo

Fatal error: Call to undefined method stdClass::fatalError() in %s/bug63066.php on line 5
